# CoreNet

./: .gitignore  ABOUT.md  ABSTRACT.md  FAQ.md  LICENSE  README.md  corenet-spec-v0.1.md  meshcore-lxmf-encoding.csv  meshcore-lxmf-encoding.md  pyproject.toml
archive/: README-2025-12.md
bridge/: __main__.py  addressing.py  channel_state.py  commands.py  config.py  conflicts.py  control_channel.py  daemon.py  manifest.py  peer_gossip.py  reticulum_adapter.py  router.py
bridge/companion/: frames.py  protocol.py  serial_transport.py  types.py
bridge/lxmf_layer/: encoding.py  transport.py
examples/: config.example.yaml  single_bridge_smoke.py  two_bridges.py  two_bridges_live.py
security-notes/: 001-shared-secret-broadcast-meshtastic-2024.md  002-bridge-operator-trust.md  003-flood-amplification-lax-sea.md  004-part-97-and-encryption.md  README.md
tests/: conftest.py  test_addressing.py  test_channel_notices.py  test_channel_state.py  test_commands.py  test_config.py  test_conflicts.py  test_control_channel.py  test_coretnet_integration.py  test_daemon.py  test_dynamic_peers.py  test_encoding.py  test_frames.py  test_manifest.py  test_peer_gossip.py  test_pending_outbound.py  test_pipe.py  test_reticulum_adapter.py  test_router.py  test_serial_transport.py
tests/doubles/: mock_app.py  mock_lxmf.py  mock_radio.py
