[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corenet-bridge"
version = "0.1.0"
description = "CoreNet reference bridge: MeshCore companion protocol ↔ LXMF/Reticulum"
requires-python = ">=3.11"
dependencies = [
    "pyserial-asyncio>=0.6",
    "msgpack>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
reticulum = [
    "rns>=0.8",
    "lxmf>=0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 10

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
